--- a/src/ChinaTower.StationPlanning/Views/Tower/Index.cshtml
+++ b/src/ChinaTower.StationPlanning/Views/Tower/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<Tower>
+@{
     ViewBag.Title = "铁塔管理";
 }
 <div class="clearfix">
@@ -53,7 +54,6 @@
         <div id="modalEditTower" class="modal fade">
             <div class="modal-dialog">
                 <div class="modal-content">
-
                     <form asp-action="Edit" asp-controller="Tower" method="post" enctype="multipart/form-data">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -156,7 +156,7 @@
             <header class="panel-heading">
                 铁塔数据
             </header>
-            <form asp-action="Index" asp-controller="Tower" method="get" class="row text-small">
+            <form asp-action="Index" asp-controller="Tower" method="get" class="row text-small" id="frmAjaxLoad">
                 <div class="col-lg-9">
                     <p class="form-inline">
                         <input type="text" placeholder="铁塔名称" id="txtSearchName" class="form-control" name="Name" value="@Context.Request.Query["name"]" />
@@ -209,10 +209,36 @@
                             <th>操作</th>
                         </tr>
                     </thead>
-                    <tbody class="lst-towers"></tbody>
-                </table>
-                @Html.MakePager()
+                    <tbody class="lst-towers">
+                        @foreach (var x in Model)
+                        {
+                            <tr data-tower="@x.Id" data-status="@x.Status" data-url="@x.Url" data-scene="@x.Scene" data-provider="@x.Provider" data-lon="@x.Lon" data-lat="@x.Lat" data-picture="@Url.Action("Download", "Blob", new { id = x.BlobId })" data-height="@x.Height">
+                                <td><input type="checkbox" data-id="@x.Id" class="tower-chk" /></td>
+                                <td class="name">@x.Name</td>
+                                <td class="city">@x.City</td>
+                                <td class="district">@x.District</td>
+                                <td class="address">@x.Address</td>
+                                <td>@x.Provider</td>
+                                <td>@x.Scene</td>
+                                <td class="type">@x.Type</td>
+                                <td>@x.Height 米</td>
+                                <td>@x.Status</td>
+                                <td>
+                                    <a class="btn btn-small btn-info" href="javascript:editTower('@x.Id')">编辑</a>
+                                    <a class="btn btn-small btn-danger" href="javascript:deleteTower('@x.Id')">删除</a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>                
             </div>
+            <footer class="panel-footer">
+                <div class="row">
+                    <div class="col-lg-12 text-right text-center-sm">
+                        @Html.MakePager("", "active", "pagination pagination-small m-t-none m-b-none")
+                    </div>
+                </div>
+            </footer>
         </section>
     </div>
 </div>
